# Nexis

./: .gitignore  README.md  agent.py  config.py  pyproject.toml  test.py  ui.py
tools/: ask_human.py  bash_access.py  create_path.py  delete_path.py  edit_file.py  list_files.py  read_file.py  read_observation.py  semantic_search.py  tool_registry.py  update_file.py  web_search.py
tools/repomap/: extension_map.py  get_repomap.py  lang_node_map.py
utils/: observations.py  print_utils.py  prune_messages.py  run_tool_calls.py
utils/human_feedback/: ask_permission.py  preview_edit.py
