[project]
name = "nexis"
version = "0.1.0"
description = "Like Claude Code but Dumber"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "litellm>=1.83.8",
    "python-dotenv>=1.0.1",
    "rich>=15.0.0",
    "tavily-python>=0.7.23",
    "tree-sitter>=0.21.3,<0.22",
    "tree-sitter-languages>=1.10.2",
]
[tool.setuptools]
py-modules = ["agent", "config"]
[tool.setuptools.packages.find]
where = ["."]
[project.scripts]
nexis = "agent:main"
